@@ -51,30 +51,29 @@ Let us dispatch json.
     >>> import simplejson
     >>> req = simplejson.dumps({'method':'echo'})
     >>> pprint(simplejson.loads(d.dispatch(req)))
-    {u'error': {u'message': u'Server Exception :: echo()
-       takes exactly 2 arguments (1 given)',
-                u'type': u"<type 'exceptions.TypeError'>"},
-     u'result': None}
+    {'error': {'message': 'Server Exception ::
+    echo() takes exactly 2 arguments (1 given)',
+               'type': "<type 'exceptions.TypeError'>"},
+     'result': None}
 
 Now without exception.
 
     >>> req = simplejson.dumps({'method':'echo', 'params':{0:'hello'}})
     >>> pprint(simplejson.loads(d.dispatch(req)))
-    {u'result': u'hello'}
+    {'result': 'hello'}
 
 The special introspection methods are named like a namespace.
 
     >>> req = simplejson.dumps({'method':'system.list_methods'})
     >>> pprint(simplejson.loads(d.dispatch(req)))
-    {u'result': [{u'name': u'echo'},
-                 {u'name': u'system.describe'},
-                 {u'name': u'system.list_methods'}]}
+    {'result': [{'name': 'echo'},
+                {'name': 'system.describe'},
+                {'name': 'system.list_methods'}]}
     >>> req = simplejson.dumps({'method':'system.describe'})
     >>> pprint(simplejson.loads(d.dispatch(req)))
-    {u'result': {u'name': u'Python JSONRPC Service',
-                 u'procs': [{u'name': u'echo'},
-                            {u'name': u'system.describe'},
-                            {u'name': u'system.list_methods'}],
-                 u'sdversion': u'1.0',
-                 u'summary': u'Service dispatched by python JSONRPCDispatcher'}}
-
+    {'result': {'name': 'Python JSONRPC Service',
+                'procs': [{'name': 'echo'},
+                          {'name': 'system.describe'},
+                          {'name': 'system.list_methods'}],
+                'sdversion': '1.0',
+                'summary': 'Service dispatched by python JSONRPCDispatcher'}}
